2007-11-30	Daniel Hellstrom <daniel@gaisler.com>

	* shared/include/grspw.h, shared/spw/grspw.c: GRSPW SpaceWire Driver.
	Fixes typecast to volatile integer instead of to integer. Added
	scanning for GRSPW2 Core, The GRSPW2 core is run in legacy mode.

2007-11-30	Daniel Hellstrom <daniel@gaisler.com>

	* shared/can/occan.c: LEON2/3 OCCAN CAN driver. Fixes typecast to
	volatile integer where needed. Fixes bug where closing the driver and
	opening it again could make the driver not starting transmission due
	to the software fifo was not cleared.

2007-11-30	Daniel Hellstrom <daniel@gaisler.com>

	* shared/can/grcan.c, shared/can/grcan_rasta.c,
	shared/include/ambapp.h: GRCAN CAN driver. Fixes Interrupt
	enabling/disabling in the driver, interrupt may not be restored
	correctly. Implements the baud rate calculation routine. Removed
	unnecessary printk. Fixed scanning to support GRCAN and GRHCAN
	hardware. Added GRCAN device number to ambapp.h.

2007-10-11	Daniel Hellstrom <daniel@gaisler.com>

	* shared/can/occan.c: Fixes bug in OC-CAN baud rate calculator. The
	BTR1 8-bit value was swapped.

2007-09-21	Daniel Hellstrom <daniel@gaisler.com>

	* shared/can/occan.c: Fix warning on Diab compiler.

2007-09-19	Daniel Hellstrom <daniel@gaisler.com>

	* shared/can/occan.c: Fix Reenable command and fix typo.

2007-09-18	Joel Sherrill <joel.sherrill@OARcorp.com>

	* shared/1553/b1553brm.c, shared/can/grcan.c: Remove include of sched.h

2007-09-13	Joel Sherrill <joel.sherrill@OARcorp.com>

	* shared/spw/grspw.c: Remove include of sched.h. It does not appear to
	be needed and is unavailable when POSIX is disabled.

2007-09-12	Daniel Hellstrom <daniel@gaisler.com>

	* shared/can/grcan.c, shared/include/debug_defs.h, shared/spw/grspw.c:
	Remove use of DEBUG_printf.

2007-09-07	Daniel Hellstrom <daniel@gaisler.com>

	* shared/1553/b1553brm.c, shared/can/grcan.c, shared/can/grcan_rasta.c,
	shared/can/occan.c, shared/spw/grspw.c, shared/spw/grspw_pci.c,