@@ -40,20 +40,20 @@ extern "C" {
 #define GAISLER_LEON3     0x03
 #define GAISLER_LEON3DSU  0x04
 #define GAISLER_ETHAHB    0x05
-#define	GAISLER_APBMST    0x06
-#define	GAISLER_AHBUART   0x07
-#define	GAISLER_SRCTRL    0x08
+#define GAISLER_APBMST    0x06
+#define GAISLER_AHBUART   0x07
+#define GAISLER_SRCTRL    0x08
 #define GAISLER_SDCTRL    0x09
-#define	GAISLER_APBUART   0x0C
-#define	GAISLER_IRQMP     0x0D
-#define	GAISLER_AHBRAM    0x0E
-#define	GAISLER_GPTIMER   0x11
-#define	GAISLER_PCITRG    0x12
-#define	GAISLER_PCISBRG   0x13
-#define	GAISLER_PCIFBRG   0x14
-#define	GAISLER_PCITRACE  0x15
-#define	GAISLER_DMACTRL   0x16
-#define	GAISLER_OCCAN     0x19
+#define GAISLER_APBUART   0x0C
+#define GAISLER_IRQMP     0x0D
+#define GAISLER_AHBRAM    0x0E
+#define GAISLER_GPTIMER   0x11
+#define GAISLER_PCITRG    0x12
+#define GAISLER_PCISBRG   0x13
+#define GAISLER_PCIFBRG   0x14
+#define GAISLER_PCITRACE  0x15
+#define GAISLER_DMACTRL   0x16
+#define GAISLER_OCCAN     0x19
 #define GAISLER_PIOPORT   0x1A
 #define GAISLER_ETHMAC    0x1D
 #define GAISLER_SPACEWIRE 0x1f
