@@ -1,3 +1,7 @@
+2007-12-05	Daniel Hellstrom <daniel@gaisler.com>
+
+	* shared/include/ambapp.h: Sync head and 4.8 branch.
+
 2007-11-30	Daniel Hellstrom <daniel@gaisler.com>
 
 	* shared/include/grspw.h, shared/spw/grspw.c: GRSPW SpaceWire Driver.
